--- a/reading.properties
+++ b/reading.properties
@@ -1,3 +1,5 @@
-timeoutInMilliseconds=3333
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
+timeoutInMilliseconds=2000
 env=default
-bookstore.url=http://bookstore:8090
+spring.sleuth.sampler.probability=1
+spring.zipkin.base-url=http://zipkin-server:9411/
